<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/action_about"
            android:icon="@drawable/ic_about_24dp"
            android:title="@string/title_about"/>


    </group>
    <group android:id="@+id/group_changePassword">
        <item
            android:id="@+id/action_change_password"
            android:icon="@drawable/ic_settings_24dp"
            android:title="@string/change_password">

        </item>
    </group>

    <item android:title="Settings">
        <menu>
            <item
                android:id="@+id/action_settings"
                android:icon="@drawable/ic_settings_24dp"
                android:title="@string/action_settings"/>
        </menu>
    </item>

</menu>
