<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:fillViewport="true" >

    <LinearLayout
        android:id="@+id/db1_root"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:padding="6dip"
        android:orientation="vertical" >



            <AutoCompleteTextView
                android:id="@+id/autoCompleteRetailer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:completionThreshold="1"
                android:ems="10"
                android:hint="Select Retailer" >

                <requestFocus />
            </AutoCompleteTextView>

            <LinearLayout
            	android:id="@+id/facilityHeader"                
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical" >

                <ProgressBar
                    android:id="@+id/getDuesProgress"
                    style="@android:style/Widget.ProgressBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:visibility="invisible" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/accntSummary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:gravity="right"
                        android:text="@string/account_summary"
                        android:onClick="onClick"                
       					android:clickable="true"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/currentDuesLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
		                android:layout_alignParentLeft="true"                                                
                        android:layout_margin="2dp"
                        android:text="Today&apos;s Dues: "
                        android:textColor="#848484"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/currentDues"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
            			android:layout_toRightOf="@+id/currentDuesLabel"                                                                                
                        android:layout_margin="2dp"
                        android:text="N/A"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                    
            <TextView
                android:id="@+id/fdrAmountLabel"
            	style="@style/TextLabel"                                
                android:layout_height="wrap_content"
            	android:layout_toLeftOf="@+id/fdrAmount"                
                android:layout_margin="2dp"
                android:text="FDR: "/>

            <TextView
                android:id="@+id/fdrAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"                
                android:layout_margin="2dp"
                android:text="N/A"                               
                android:textSize="12sp"
                android:textStyle="bold" />                      
                </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/totalDuesLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="Total Dues: "
                        android:textColor="#848484"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/totalDues"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
            			android:layout_toRightOf="@+id/totalDuesLabel"                                                                                
                        android:layout_margin="2dp"
                        android:text="N/A"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/indentsOrdersLayout"                
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/home_btn_indents"
                    style="@style/HomeButton"
                    android:drawableTop="@drawable/indent_button"
                    android:onClick="onClickFeature"
                    android:text="@string/title_feature1" />

                <Button
                    android:id="@+id/home_btn_orders"
                    style="@style/HomeButton"
                    android:drawableTop="@drawable/order_button"
                    android:onClick="onClickFeature"
                    android:text="@string/title_feature2" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/paymentsCatalogLayout"                                
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/home_btn_payments"
                    style="@style/HomeButton"
                    android:drawableTop="@drawable/payments_button"
                    android:onClick="onClickFeature"
                    android:text="@string/title_feature3" />

                <Button
                    android:id="@+id/home_btn_catalog"
                    style="@style/HomeButton"
                    android:drawableTop="@drawable/catalog_button"
                    android:onClick="onClickFeature"
                    android:text="@string/title_feature4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/home_btn_outlets"
                    style="@style/HomeButton"
                    android:drawableTop="@drawable/outlet_button"
                    android:onClick="onClickFeature"
                    android:text="@string/title_feature5" />              
            </LinearLayout>
          
        </LinearLayout>

</ScrollView>