<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:orientation="vertical">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="in.vasista.location.MapsActivity" />

    <fragment
        android:id="@+id/maplist_fragment"
        android:name="in.vasista.location.MapItemFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="in.vasista.location.MapsActivity" />

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.75"
        android:background="@android:color/black"
        android:visibility="gone" />
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/noteEntryView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@android:color/white"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <TextView
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_gravity="end"
                android:background="@drawable/ic_clear_black_24dp"

                android:visibility="gone" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/noteName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/note_title"
                    android:imeActionId="@+id/note"
                    android:imeActionLabel="Next"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/noteInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/note_description"
                    android:imeActionId="@+id/note"
                    android:imeActionLabel="Done"
                    android:imeOptions="actionNext"
                    android:inputType="textMultiLine"
                    android:lines="2"
                    android:singleLine="false" />

            </android.support.design.widget.TextInputLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp">

                <View
                    android:id="@+id/ViewColorPickerHelper"
                    android:layout_width="1dip"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="4dip"
                    android:layout_marginTop="4dip"
                    android:background="?android:attr/dividerVertical"/>
                <Button
                    android:id="@+id/recordCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:textColor="@color/colorAccent"
                    android:layout_toStartOf="@id/ViewColorPickerHelper"
                    android:layout_toLeftOf="@id/ViewColorPickerHelper"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@android:string/cancel"/>
                <Button
                    android:id="@+id/recordNote"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/colorAccent"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@id/ViewColorPickerHelper"
                    android:layout_toRightOf="@id/ViewColorPickerHelper"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/save_map_sync"/>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switch_view"
            android:layout_gravity="end"
            android:padding="6dp"
            map:switchPadding="2dp"
            android:background="#88FFFFFF"
            android:text="@string/text_map_switch"
            android:textSize="@dimen/text_size_tiny"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/clearFilter"
            android:layout_width="wrap_content"
            android:padding="6dp"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_tiny"
            android:textColor="@android:color/white"
            android:background="#88000000"
            android:visibility="gone"
            android:text="@string/text_map_filter_clear" />
    </android.support.v7.widget.LinearLayoutCompat>
</FrameLayout>

